# vsc-extension-scanner

./: .bandit  .coveragerc  .gitignore  .pre-commit-config.yaml  .semgrep.yml  .workflow-test  ANTIGRAVITY.md  API_RESEARCH.md  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTRIBUTION.md  DOCUMENTATION_IMPROVEMENTS.md  GITHUB_INTEGRATION_IMPROVEMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENT_PLAN.md  LICENSE  MANIFEST.in  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PRD.md  PR_PHASE1.md  PR_PHASE2.md  PR_PHASE3_IMPROVEMENTS.md  README.md  SECURITY.md  SECURITY_ANALYSIS.md  SECURITY_FIXES_APPLIED.md  SECURITY_QUICK_FIX_GUIDE.md  STATUS.md  cache_manager.py  coverage.xml  extension_discovery.py  output_formatter.py  pyproject.toml  setup.py  test_api.py  test_security_vulnerabilities.py  (+4 more)
.claude/: CLAUDE.md  COMMAND_TEMPLATE.md  FLAGS.md  MCP_Context7.md  MCP_LOADER.md  MCP_Morphllm.md  MCP_Serena.md  MCP_TOOLS_REFERENCE.md  MODE_LOADER.md  MODE_Orchestration.md  MODE_Task_Management.md  MODE_Token_Efficiency.md  OPTIMIZATION_REPORT.md  PRINCIPLES.md  PROJECT_CONFIG.yaml  RESEARCH_CONFIG.md  RULES.md  RULES_CORE.md  RULES_REFERENCE.md  RULES_WORKFLOW.md
.claude/.archive/: MCP_Magic.md  MCP_Tavily.md  MIGRATION_GUIDE.md  MODE_Business_Panel.md  MODE_DeepResearch.md  README.md  REFACTORING_SUMMARY.md  RULES.md
.claude/agents/: deep-research-agent.md  performance-engineer.md  python-expert.md  quality-engineer.md  root-cause-analyst.md  security-engineer.md
.claude/archive/: BUSINESS_SYMBOLS.md  README.md  business-panel.md
.claude/helpers/: gh-status-transition.md
.claude/mcp/: Context7.md  MCP_Playwright.md  Sequential.md  Serena.md
.claude/modes/: Brainstorming.md  Introspection.md  Orchestration.md  Task_Management.md  Token_Efficiency.md
.github/: branch-protection-config.json  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  documentation.yml  feature.md  feature.yml  feature_request.md  hotfix.yml  refactoring.yml  release.md  release.yml  security-enhancement.yml  security.md  task.md  task.yml
.github/workflows/: auto-dependency-blocking.yml  auto-feature-completion.yml  auto-status-transitions.yml  release.yml  security.yml  semgrep.yml  sync-project-fields.yml  test-automation-workflows.yml  test.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  important_guidelines.md  project_purpose.md  session_checkpoint_2025-10-27.md  session_checkpoint_2025-10-30.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md  v3.5.3_release_completion.md
claudedocs/: phase3-serena-handoff.md
docs/: PHASE3_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  README.md
docs/archive/: README.md
docs/contributing/: BANDIT_SUPPRESSION_GUIDELINES.md  BRANCH_PROTECTION.md  CODE_REVIEW_CHECKLIST.md  DOCUMENTATION_CONVENTIONS.md  DOCUMENTATION_STANDARDS.md  GITHUB_PROJECTS.md  GITHUB_PROJECTS_QUICKSTART.md  GITHUB_PROJECTS_SETUP.md  GITHUB_RELATIONSHIPS.md  GITHUB_SETTINGS_CHECKLIST.md  GITHUB_WORKFLOWS.md  GIT_WORKFLOW.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  ROADMAP_CHECKLIST.md  TESTING_CHECKLIST.md  VERSION_MANAGEMENT.md
docs/design/: ENHANCED_DATA_INTEGRATION_PLAN.md  PRD.md
docs/features/: CLI_UX_ENHANCEMENT.md  HTML_REPORT_SPECIFICATION.md  IMPROVEMENT_PLAN.md  RETRY_MECHANISM.md
docs/guides/: API_REFERENCE.md  ARCHITECTURE.md  COVERAGE_STRATEGY.md  ERROR_CODES.md  ERROR_HANDLING.md  FEATURE_IMPLEMENTATION.md  GITHUB_API_RATE_LIMITS.md  GITHUB_FILTERS.md  HTML_REPORTS.md  PERFORMANCE.md  PERFORMANCE_DIAGNOSTICS.md  SECURITY.md  TESTING.md  _CANONICAL_REFERENCES.md
docs/phases/: PHASE2_REQUIREMENTS.md  PHASE3_REQUIREMENTS.md
docs/project/: ATTRIBUTION.md  PHASE_4_MAINTAINABILITY_REVIEW.md  PHASE_4_READINESS_REPORT.md  PHASE_4_TEST_GAP_ANALYSIS.md  PRD.md  ROADMAP.md  STATUS.md  TOOL_RECOMMENDATIONS.md  v3.3-ROADMAP.md  v3.4.1-ROADMAP.md  v3.5.1-ROADMAP.md  v3.5.3-roadmap.md  v3.5.4-roadmap.md  v3.6-coverage-improvement-roadmap.md  v3.6-implementation-plan.md  v3.7-phase1.2-handoff.md  v3.7-phase1.3-handoff.md  v3.7-phase2-handoff.md  v3.7-testability-maintainability-roadmap.md  v4.1-roadmap.md  v4.x-enhancement-opportunities.md  v5.0.2-roadmap.md  v5.0.3-module-risk-display-roadmap.md  v5.0.4-phase1-completion-roadmap.md  (+1 more)
scripts/: add_pytest_markers.py  archive_release_docs.py  bump_version.py  check_doc_freshness.sh  create_issue.sh  manage_issue_relationships.sh  poc_parallel_scan.py  pre_release_check.py  run_tests.py  smoke_test.py  smoke_test_extensions.json  sync_existing_issues.sh  test_parallel_poc.sh  verify_branch_protection.sh
tests/: architecture_config.yaml  conftest.py  test_api.py  test_api_error_handling.py  test_architecture.py  test_cache_commands.py  test_cache_corruption_handling.py  test_cache_edge_cases.py  test_cache_integrity.py  test_cache_orphaned_cleanup.py  test_cache_secret_key_fallback.py  test_cli.py  test_cli_coverage_boost.py  test_cli_detailed_flag.py  test_cli_edge_cases.py  test_comprehensive_security_findings.py  test_config_business_logic.py  test_config_commands.py  test_config_extensions_dir.py  test_config_manager.py  test_db_integrity.py  test_display.py  test_error_handling.py  test_extension_discovery.py  test_failed_extensions.py  test_filter_help_generator.py  test_html_base_component.py  test_html_charts.py  test_html_controls.py  test_html_detail_view.py  test_html_footer.py  test_html_generator.py  test_html_header.py  test_html_module_breakdown.py  test_html_overview_table.py  test_html_score_contributions.py  test_html_security_notes.py  test_input_validators.py  test_integration.py  test_integration_real_api.py  (+42 more)
vscode_scanner/: __init__.py  _version.py  cache_manager.py  cli.py  config_manager.py  constants.py  display.py  extension_discovery.py  filter_help_generator.py  html_report_generator.py  output_formatter.py  output_writer.py  parallel_executor.py  scan_helpers.py  scan_orchestrator.py  scanner.py  summary_formatter.py  types.py  utils.py  vscan.py  vscan_api.py
(+160 files in other folders)
