[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vscode-extension-scanner"
version = "2.2.1"
description = "Security scanner for VS Code extensions using vscan.dev"
readme = "README.md"
authors = [
    {name = "Joerg von Livonius", email = "joerg.von.livonius@trivium-esolutions.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
keywords = ["vscode", "security", "scanner", "extensions", "audit", "vscan"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/jvlivonius/vsc-extension-scanner"
Documentation = "https://github.com/jvlivonius/vsc-extension-scanner/blob/main/README.md"
Repository = "https://github.com/jvlivonius/vsc-extension-scanner"
Issues = "https://github.com/jvlivonius/vsc-extension-scanner/issues"

[project.scripts]
vscan = "vscode_scanner.vscan:main"

[tool.setuptools]
packages = ["vscode_scanner"]

[tool.setuptools.package-data]
vscode_scanner = ["*.py"]
