[build-system]
requires = ["setuptools>=61.0", "wheel>=0.38.1"]  # wheel>=0.38.1 fixes CVE-2022-40898
build-backend = "setuptools.build_meta"

[project]
name = "vscode-extension-scanner"
dynamic = ["version"]
description = "Security scanner for VS Code extensions using vscan.dev"
readme = "README.md"
authors = [
    {name = "Joerg von Livonius", email = "joerg.von.livonius@trivium-esolutions.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
keywords = ["vscode", "security", "scanner", "extensions", "audit", "vscan"]
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0,<14.0.0",
    "typer>=0.9.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/jvlivonius/vsc-extension-scanner"
Documentation = "https://github.com/jvlivonius/vsc-extension-scanner/blob/main/README.md"
Repository = "https://github.com/jvlivonius/vsc-extension-scanner"
Issues = "https://github.com/jvlivonius/vsc-extension-scanner/issues"

[project.scripts]
vscan = "vscode_scanner.vscan:cli_main"

[project.optional-dependencies]
test = [
    "pyyaml>=6.0.0,<7.0.0",  # For architecture tests configuration
    "pytest>=7.0.0",  # Test framework
]
dev = [
    "bandit>=1.7.6",  # AST-based security scanner
    "safety>=2.3.0",  # Dependency vulnerability scanner
    "pip-audit>=2.4.0",  # PyPI package auditing
    "pre-commit>=3.0.0",  # Pre-commit hooks framework
    "black>=23.12.0",  # Code formatter
    "pylint>=3.0.0",  # Comprehensive linter
    "pylint-security",  # Pylint security plugin
    "future>=0.18.3",  # Fixes CVE-2022-40899 (transitive dependency, pinned for security)
]

[tool.setuptools]
packages = ["vscode_scanner"]

[tool.setuptools.dynamic]
version = {attr = "vscode_scanner._version.__version__"}

[tool.setuptools.package-data]
vscode_scanner = ["*.py"]
