[build-system]
requires = ["setuptools>=61.0", "wheel>=0.38.1"]  # wheel>=0.38.1 fixes CVE-2022-40898
build-backend = "setuptools.build_meta"

[project]
name = "vscode-extension-scanner"
dynamic = ["version"]
description = "Security scanner for VS Code extensions using vscan.dev"
readme = "README.md"
authors = [
    {name = "Joerg von Livonius", email = "joerg.von.livonius@trivium-esolutions.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
keywords = ["vscode", "security", "scanner", "extensions", "audit", "vscan"]
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0,<15.0.0",
    "typer>=0.9.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/jvlivonius/vsc-extension-scanner"
Documentation = "https://github.com/jvlivonius/vsc-extension-scanner/blob/main/README.md"
Repository = "https://github.com/jvlivonius/vsc-extension-scanner"
Issues = "https://github.com/jvlivonius/vsc-extension-scanner/issues"

[project.scripts]
vscan = "vscode_scanner.cli:cli_main"

[project.optional-dependencies]
test = [
    "pyyaml>=6.0.0,<7.0.0",  # For architecture tests configuration
    "pytest>=7.0.0",  # Test framework
    "pytest-xdist>=3.0.0,<4.0.0",  # Parallel test execution (4.4x speedup)
    "pytest-cov>=4.0.0,<5.0.0",  # Coverage for parallel execution
    "hypothesis>=6.0.0,<7.0.0",  # Property-based testing (Phase 2)
    "coverage[toml]>=7.0.0,<8.0.0",  # Branch coverage tracking (Phase 2)
    "tomli>=2.0.0,<3.0.0; python_version < '3.11'",  # TOML parsing for Python 3.8-3.10
]
dev = [
    "bandit==1.8.6",  # AST-based security scanner (pinned for consistency)
    "safety>=2.3.0",  # Dependency vulnerability scanner
    "pip-audit>=2.4.0",  # PyPI package auditing
    "pre-commit>=3.0.0",  # Pre-commit hooks framework
    "black>=23.12.0",  # Code formatter
    "pylint>=3.0.0",  # Comprehensive linter
    "pylint-security",  # Pylint security plugin
    "hypothesis>=6.0.0,<7.0.0",  # Property-based testing (Phase 2)
    "coverage>=7.0.0,<8.0.0",  # Branch coverage tracking (Phase 2)
]

[tool.setuptools]
# Auto-discover all packages with __init__.py (includes subpackages like html_report)
packages = {find = {}}

[tool.setuptools.dynamic]
version = {attr = "vscode_scanner._version.__version__"}

[tool.setuptools.package-data]
vscode_scanner = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    # === Test Group Markers ===
    # Every test MUST have exactly one group marker for categorization
    # Used for test organization and --include/--exclude filtering
    "unit: [GROUP] Unit tests for individual components",
    "security: [GROUP] Security vulnerability tests",
    "architecture: [GROUP] Architecture compliance tests",
    "parallel: [GROUP] Parallel execution and threading tests",
    "integration: [GROUP] Integration tests with mocked dependencies",
    "real_api: [GROUP] Tests that make real API calls (slow, network-dependent)",
    "mock_validation: [GROUP] Mock validation against real API responses",

    # === Behavioral Markers ===
    # Optional markers that modify test execution behavior
    # Can be combined with any group marker
    "slow: [BEHAVIORAL] Tests that take >5 seconds (excluded by --fast flag)",
    "property_based: [BEHAVIORAL] Property-based tests using Hypothesis framework",
]

# Coverage configuration for pytest-cov with pytest-xdist parallel execution
[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
source = ["vscode_scanner"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
